<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/photography_id"
            android:title="@string/videography_amp_photography"
            android:icon="@drawable/ic_baseline_photo_camera_24" />

        <item
            android:id="@+id/graphics_id"
            android:title="@string/graphics_design"
            android:icon="@drawable/ic_baseline_graphic_eq_24" />
        <item
            android:id="@+id/software_dev_id"
            android:title="@string/software_development"
            android:icon="@drawable/ic_baseline_computer_24" />
    </group>

    <item android:title="@string/admin_panel"
          android:textColor="@android:color/holo_red_light">
        <menu>
            <item
                android:id="@+id/profiles_id"
                android:title="@string/company_profiles"
                android:icon="@drawable/ic_account_box_black_24dp" />
            <item
                android:id="@+id/users_id"
                android:title="@string/user"
                android:icon="@drawable/ic_people_black_24dp" />
            <item
                android:id="@+id/about_id"
                android:title="@string/about"
                android:icon="@drawable/ic_info_black_24dp" />
            <item
                android:id="@+id/log_out"
                android:title="@string/log_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp" />
        </menu>
    </item>

    !--<group>
    <item
            android:fontFamily="@font/social_media_font"
            android:title="@string/facebook"
            android:textColor="@color/dark_grey_color"
            android:textSize="50sp"/>
        <item
            android:fontFamily="@font/social_media_font"
            android:title="@string/twitter"
            android:textColor="@color/dark_grey_color"
            android:textSize="50sp"/>
        <item
            android:fontFamily="@font/social_media_font"
            android:title="@string/instagram"
            android:textColor="@color/dark_grey_color"
            android:textSize="50sp"/>
    </group>-->
</menu>